--- a/app/index.html
+++ b/app/index.html
@@ -19,16 +19,9 @@
     </head>
     <body>
         <div class="container">
-            <div class="hero-unit">
-                <h1>'Allo, 'Allo!</h1>
-                <p>You now have</p>
-                <ul>
-                    <li>HTML5 Boilerplate</li>
-                    <li>Polymer</li>
-                </ul>
-                <p>installed.</p>
-                <h3>Enjoy coding! - Yeoman</h3>
-            </div>
+            <h1>sine-clock</h1>
+
+            <div id="hour" class="clock-face"></div>
         </div>
 
 
@@ -40,6 +33,9 @@
 
         <!-- build:js scripts/vendor.js -->
         <script src="bower_components/polymer/polymer.min.js"></script>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/raphael/raphael-min.js"></script>
+        <script src="scripts/sine-clock.js"></script>
         <!-- endbuild -->
 </body>
 </html>
