Adding seconds to the frontend, smoothing it out, commenting

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <h1>sine-clock</h1>
 
-            <div id="hour" class="clock-face"></div>
+            <div id="seconds"></div>
         </div>
 
 
