--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container">
             <h1>sine-clock</h1>
-            <div id="seconds"></div>
+            <div id="time"></div>
         </div>
 </body>
 </html>
